# fastpipe

./: Cargo.nix  Cargo.toml  flake.nix  mic.sh
src/: main.rs
